--- a/Assets/OhanaYa/CopyGUID/package.json
+++ b/Assets/OhanaYa/CopyGUID/package.json
@@ -3,7 +3,7 @@
     "displayName": "Copy GUID",
     "version": "1.0.0",
     "unity": "2019.4",
-    "description": "Assets/Copy GUID",
+    "description": "Add a menu item to get the GUID of the selected asset.",
     "keywords": ["copy", "guid"],
     "license": "MIT",
     "author": {
